# data-engineering-challenge

./: .gitignore
challenge/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
challenge/dags/: etl_nyc_taxi.py
challenge/sql/: 02_raw_tables.sql  03_trusted.sql  03_trusted_ddl.sql  03_trusted_indices.sql  03_trusted_insert.sql  04_refined.sql  05_respostas.sql
challenge/sql/init/: 01_schemas.sql
